infrastructure/controllers/production/cilium-gateway/cilium-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.240
spec:
  gatewayClassName: cilium
  addresses:
  - value: 192.168.1.240
    type: IPAddress
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
